# rs-shellcode

./: Cargo.toml  README.md  sh_linux_xor  sh_xor
bindings/: Cargo.toml
src/: main.rs
