[package]
name = "rs_shellcode"
version = "0.1.0"
authors = ["b1tg <b1tg@users.noreply.github.com>", "Maciej Skrzypek <maciek.skrzypek [at] gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "on"
strip = true 
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
region = "3.0.0"
clap = "3.0.0-beta.2"
houdini = "1.0.2"