[package]
name = "rs_shellcode_bindings"
version = "0.1.0"
authors = ["b1tg <b1tg@users.noreply.github.com>", "Maciej Skrzypek <maciek.skrzypek [at] gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "on"
opt-level = "s"
strip = "symbols"

[dependencies]
windows = { git = "https://github.com/microsoft/windows-rs" }

[build-dependencies]
windows = { git = "https://github.com/microsoft/windows-rs" }
